@@ -2154,9 +2154,9 @@ case 103:
 				    yyvsp[0].typePtr->basetype = SMI_BASETYPE_UNSIGNED64;
 				    if (yyvsp[0].typePtr->listPtr) {
 					((Range *)yyvsp[0].typePtr->listPtr->ptr)->minValuePtr->basetype = SMI_BASETYPE_UNSIGNED64;
-					((Range *)yyvsp[0].typePtr->listPtr->ptr)->minValuePtr->value.unsigned64 = 0;
+					((Range *)yyvsp[0].typePtr->listPtr->ptr)->minValuePtr->value.unsigned64 = 0ULL;
 					((Range *)yyvsp[0].typePtr->listPtr->ptr)->maxValuePtr->basetype = SMI_BASETYPE_UNSIGNED64;
-					((Range *)yyvsp[0].typePtr->listPtr->ptr)->maxValuePtr->value.unsigned64 = 18446744073709551615UL;
+					((Range *)yyvsp[0].typePtr->listPtr->ptr)->maxValuePtr->value.unsigned64 = 18446744073709551615ULL;
 				    }
 				    setTypeParent(yyvsp[0].typePtr, NULL, "Unsigned64");
 				}
